<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_del_selection"
        android:title="@string/delete" />

    <item
        android:id="@+id/menu_update_enable"
        android:title="@string/allow_update" />

    <item
        android:id="@+id/menu_update_disable"
        android:title="@string/disable_update" />

    <item
        android:id="@+id/menu_add_to_group"
        android:title="@string/add_to_group" />

    <item
        android:id="@+id/menu_remove_to_group"
        android:title="@string/remove_group" />

    <item
        android:id="@+id/menu_change_source"
        android:title="@string/change_source_batch" />

    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/clear_cache" />

    <item
        android:id="@+id/menu_persist_covers"
        android:title="@string/persist_network_covers" />

    <item
        android:id="@+id/menu_restore_network_covers"
        android:title="@string/restore_network_covers" />

    <item
        android:id="@+id/menu_restore_source_covers"
        android:title="@string/restore_source_covers" />

    <item
        android:id="@+id/menu_check_selected_interval"
        android:title="@string/check_selected_interval" />

    <item
        android:id="@+id/menu_update_toc"
        android:title="@string/update_book_info_toc" />

    <item
        android:id="@+id/menu_create_book_update_tasks"
        android:title="@string/create_book_update_task" />

</menu>
