<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_download"
        android:title="@string/action_download"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_download_backup"
        android:title="@string/download_from_github"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_download_mirror"
        android:title="@string/download_from_backup_cdn"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_download_alternate_mirror"
        android:title="@string/download_from_second_cdn"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_ignore_version"
        android:title="@string/ignore_this_version"
        app:showAsAction="never" />

</menu>
