<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_ok"
        android:icon="@drawable/ic_check"
        android:title="@string/ok"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_show_login_header"
        android:icon="@drawable/ic_add_online"
        android:title="@string/show_login_header"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_del_login_header"
        android:icon="@drawable/ic_clear"
        android:title="@string/del_login_header"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear_login_info"
        android:icon="@drawable/ic_clear_all"
        android:title="@string/clear_login_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_log"
        android:icon="@drawable/ic_history"
        android:title="@string/log"
        app:showAsAction="never" />

</menu>
